testsuite/negative/Issue-1004-negative.n
type x[a, b] = option[a * x[a, b]]; //E: recursive definition